[package]
name = "rust_iot_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arduino_nano33iot = { version = "0.4.0",features = ["usb", "rt"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.6.14"
cortex-m-rtic = "0.5.6"
panic-halt = "0.2.0"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
